--- a/index04.html
+++ b/index04.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Parágrafos</title>
-    <link
-      rel="shortcut icon"
-      href="icon/Dapino-Summer-Blue-Holiday-Diary-Book.512.png"
-      type="image/x-icon"
-    />
+    <link rel="shortcut icon" href="icon/Artdesigner-Fliraneo-Notebook-boy.256.png" type="image/x-icon">
+
     <style>
-      h2 {
+      h2 ,p {
         margin: 50px;
         text-shadow: 1px 2px 3px;
         -webkit-text-stroke-width: 2px;
         -webkit-text-stroke-color: #000;
         font-size: 3em;
-        color: #fffdd9;
+        color: #087DEB;
+      }
+      h3{
+        font-size: 25px;
       }
     </style>
   </head>
   <body>
     <figure>
-      <img src="icon/Dapino-Summer-Blue-Holiday-Diary-Book.512.png" alt="" />
+      <img src="icon/Artdesigner-Fliraneo-Notebook-boy.256.png" alt="" />
     </figure>
-    <h2>This is a Book 1</h2>
-    <a href="index04.html"><h2>This is Book 2</h2></a>
+    <h2>Artdesigner 2</h2>
+    <p>This is a Notebook.</p>
+    <a href="index05.html"><h3>This is Book 3</h2></a>
   </body>
 </html>
