--- a/Technology/Tec02.html
+++ b/Technology/Tec02.html
@@ -9,6 +9,7 @@
 				display:	flex;
 				flex-wrap:	wrap;
 				justify-content:	space-evenly;
+                background-repeat: no-repeat;
 }
 .foto	{
 				width: 200px;
@@ -18,7 +19,6 @@
 				background-color: #ff002b;
 				margin-bottom: 1rem;
 }
-
     </style>
 </head>
 <h1>DISPLAY:	GRID.</h1>
