--- a/Technology/Tec02.html
+++ b/Technology/Tec02.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tec02.</title>
+    <link rel="shortcut icon" href="icon01/Display grid 01.png" type="image/x-icon">
     <style>
         body{
             width: 1550px;
@@ -58,7 +59,7 @@ div{
 <body>
     <script src="app.js"></script>
     <main	class="flex-container">
-        <div	class="foto">1 <img src="icon01/Alecive-Flatwoken-Apps-File-Javascript.512.png" width="100" alt=""></div>
+        <div	class="foto">1 <img src="icon01/Display grid 01.png" width="150" alt=""></div>
         <div	class="foto">2</div>
         <div	class="foto">3</div>
         <div	class="foto">4</div>
@@ -80,5 +81,6 @@ entos	vermelhos	e	segundo	elemento	da	linha	-->
                     </div>
     </div>
 </main>
+<a href="Tec03.html">Next</a>
 </body>
 </html>
